# GraphRAG-SDK-v2

./: .env.example  .gitignore  README.md  config.yaml  create_ontology.py  extract_data.py  pyproject.toml  query_graph.py  requirements.txt
.github/workflows/: test.yml
classes/: onotology.py  scrape_cache.py
data/: rottentomatoes.txt  wikipedia.txt
examples/movies/: demo-movies.ipynb
examples/trip/: demo_orchestrator_trip.ipynb
examples/ufc/: demo-ufc-weaviate.ipynb  demo-ufc.ipynb  ontology.json
falkordb_gemini_kg/: __init__.py  helpers.py  kg.py  test_helper.py
falkordb_gemini_kg/agents/: agent.py  kg_agent.py
falkordb_gemini_kg/classes/: ChatSession.py  __init__.py  agent.py  attribute.py  chat_session.py  edge.py  entity.py  execution_plan.py  model_config.py  node.py  ontology.py  orchestrator.py  orchestrator_runner.py  relation.py  source.py
falkordb_gemini_kg/data/: rottentomatoes.txt
falkordb_gemini_kg/demos/: demo-kg.ipynb  demo-movies.ipynb  demo-ufc-weaviate.ipynb  demo-ufc.ipynb  ontology.json
falkordb_gemini_kg/document_loaders/: __init__.py  csv.py  html.py  jsonl.py  pdf.py  text.py  url.py
falkordb_gemini_kg/fixtures/: prompts.py
falkordb_gemini_kg/models/: gemini.py  model.py  ollama.py  openai.py
falkordb_gemini_kg/orchestrator/: execution_plan.py  (+4 more)
fixtures/: prompts.py
graphrag_sdk/: kg.py  ontology.py
research/: Avi_pipeline_demo.py  kg_creation_comp.py
tests/: test_auto_create_ontology.py  test_helper_validate_cypher.py  test_kg.py  test_kg_gemini.py  test_kg_ollama.py  test_kg_openai.py  test_multi_agent.py
(+62 files in other folders)
